--- a/fp/index.html
+++ b/fp/index.html
@@ -25,7 +25,7 @@
         <figure class="wrapper">
             <img src="/assets/img.png" alt="My Image">
             <h1>Noah Olatoye</h1>
-            <figcaption> Hi! I’m a software engineer who love responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put my skills to use!</figcaption>
+            <figcaption> Hi! I’m a software engineer who love responsive design and css. I recently finished a degree in front-end web development and am excited to put my skills to use!</figcaption>
         </figure>
     </header>
 
